# smithers

./: .gitignore  README.md  hello.py  pyproject.toml  script.py  smithers.py
.github/workflows/: publish-to-pypi.yml
docs/: PyPI-README.md
