[project]
name = "smithers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-community>=0.3.13",
    "langchain>=0.3.13",
    "langchain-core>=0.3.28",
    "langchain-ollama>=0.2.2",
    "langgraph>=0.2.60",
    "pypdf>=5.1.0",
    "ipykernel>=6.29.5",
]
